# UltrasondConfienceMap

./: README.md  cuda_solver.py  demo_confidence_map.py  demo_random_walker.py  pycuda_solver.py
cpp/: CMakeLists.txt  main.cpp
cpp/ConfidenceMapCpp/: CMakeLists.txt  ConfidenceMaps2D.cpp  ConfidenceMaps2D.h  ConfidenceMaps2DFacade.cpp  ConfidenceMaps2DFacade.h  README.txt  RandomWalks2D.cpp  RandomWalks2D.h  RandomWalks2DFacade.cpp  RandomWalks2DFacade.h  RandomWalks3D.cpp  RandomWalks3D.h  RandomWalks3DFacade.cpp  RandomWalks3DFacade.h  RandomWalksCore.cpp  RandomWalksCore.h  SparseSolverEigenBiCGSTAB.cpp  SparseSolverEigenBiCGSTAB.h  SparseSolverEigenCG.cpp  SparseSolverEigenCG.h  SparseSolverEigenCustom.cpp  SparseSolverEigenCustom.h  SparseSolverEigenLLT.cpp  SparseSolverEigenLLT.h  SparseSolverFactory.cpp  SparseSolverFactory.h  SparseSolverInterface.h  SparseSolverViennaCPU.cpp  SparseSolverViennaCPU.h  SparseSolverViennaGPU.cpp  SparseSolverViennaGPU.h
matlab/: attenuationWeighting2.m  confMap.m  confidenceEstimation.m  confidenceLaplacian.m  example.m  example2.m  example2d.m  example3.mlx  gen_confidence_map.m  preproc_img.m  show_attenuation_map.m
python/: confidence_map.py
