cmake_minimum_required(VERSION 3.8)
project(abus_conf2)
set(CMAKE_CXX_STANDARD 11)
add_subdirectory(ConfidenceMapCpp)
include_directories(ConfidenceMapCpp)
find_package(OpenCV REQUIRED)
include_directories(D:/Program\ Files/DCMTK/include)
link_directories(D:/Program\ Files/DCMTK/lib)
link_directories(D:/Program\ Files/DCMTK/bin)
link_directories(C:/Program\ Files/NVIDIA\ GPU\ Computing\ Toolkit/CUDA/v9.0/lib/x64)
link_directories(${CMAKE_SOURCE_DIR})
add_executable(abus_conf main.cpp)

target_link_libraries(abus_conf RandomWalksLib dcmimgle dcmdata wsock32 oflog ofstd Iphlpapi ws2_32 netapi32 zlib_d ${OpenCV_LIBS} OpenCL)